# mcu-firmware-temp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  platformio.ini
demo_core/: main.cpp
docs/: Doxyfile
docs/prj/: inaug.md
firmware/meta/: info.h  version.h
tests/host/: CMakeLists.txt
tests/host/benchmark/: CMakeLists.txt
tests/host/unit/: CMakeLists.txt
